# mockup_process

./: README.md  miwada-test.py  pyproject.toml  test.py
another_marp_markdown2pdf/: temp.md  test.md
data/: workflow.json
static/knowledge/A/: form_a.md
static/knowledge/B/: form_b.md
templates/: index.html  index_gantt.html  knowledge.html  knowledge_view.html  validate.html
